fixed little errors in the views and controller

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,9 +2,12 @@
 
 <ul>
   <li>
-    <%= course.category %>
+    <%= @course.category %>
   </li>
   <li>
-    <%= course.description %>
+    <%= @course.description %>
+  </li>
+  <li>
+    <%= @course.prerequisite %>
   </li>
 </ul>
