--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,7 +2,7 @@
 <ul>
   <% @courses.each do |course| %>
   <li>
-    <%= link_to course_path(course) %>
+    <%= link_to course.name, course_path(course) %>
   </li>
   <% end %>
 </ul>
