editing navbar and footer

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
-<div class="navbar-wagon">
+<div class="navbar-wagon" id="navbar">
 
 
   <!-- Logo -->
   <a href="/" class="navbar-wagon-brand">
- <%= image_tag "translate.png"  %>
+
   </a>
     <form>
      Search:<br>
