--- a/app/views/dashboard/bookings_index.html.erb
+++ b/app/views/dashboard/bookings_index.html.erb
@@ -1,2 +1,15 @@
 <h1>Dashboard#bookings_index</h1>
 <p>Find me in app/views/dashboard/bookings_index.html.erb</p>
+
+<div class="container">
+  <div class="row">
+    <% @bookings.each do |booking| %>
+    <!-- Specify breaking points for col -->
+      <div class="col-xs-12">
+        <button>
+          <p><%= link_to booking.course_id.name, booking_path(booking) %></p>
+        </button>
+      </div>
+    <% end %>
+  </div>
+</div>
