--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,21 +1,13 @@
 <div class="navbar-wagon" id="navbar">
 
 
-  <!-- Logo -->
-  <a href="/" class="navbar-wagon-brand">
-
-  </a>
-    <form>
-     Search:<br>
-     <input type="text" name="lastname">
-    </form>
-
+ <h3>EasyCourse</h3>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
     <a><%= link_to 'Log In', new_user_session_path %> </a>
-    ---
+
     <a><%= link_to 'Sign Up', new_user_registration_path %></a>
 
 
