--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,6 +13,13 @@
     <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
     <%= f.input :password_confirmation, required: false %>
     <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+    <%= f.input :name, class: "form-control" %>
+    <%= f.input :email, class: "form-control" %>
+    <%= f.input :location, class: "form-control" %>
+    <%= f.input :photo, class: "form-control" %>
+    <%= f.input :description, class: "form-control" %>
+    <%= f.input :payment_preferences, class: "form-control" %>
+    <%= f.input :phone, class: "form-control" %>
   </div>
 
   <div class="form-actions">
@@ -25,3 +32,5 @@
 <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+
+
