--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,13 @@
     <%= f.input :email, required: true, autofocus: true %>
     <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
     <%= f.input :password_confirmation, required: true %>
+    <%= f.input :name, class: "form-control" %>
+    <%= f.input :email, class: "form-control" %>
+    <%= f.input :location, class: "form-control" %>
+    <%= f.input :photo, class: "form-control" %>
+    <%= f.input :description, class: "form-control" %>
+    <%= f.input :payment_preferences, class: "form-control" %>
+    <%= f.input :phone, class: "form-control" %>
   </div>
 
   <div class="form-actions">
