The photo integration into the courses almost works, minor issue with checking to be solved

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -10,4 +10,7 @@
   <li>
     <%= @course.prerequisite %>
   </li>
+  <li>
+    <%= cl_image_tag(@course.photo, width: 300, height: 400, crop: :fill) %>
+  </li>
 </ul>
