--- a/app/views/shared/_simple_form_for_course.html.erb
+++ b/app/views/shared/_simple_form_for_course.html.erb
@@ -8,5 +8,7 @@
   <%= f.input :price, class: "form-control" %>
   <%= f.input :capacity, class: "form-control" %>
   <%= f.input :prerequisite, class: "form-control" %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
   <%= f.submit "Add the Course!", class: "btn-primary" %>
 <% end %>
