--- a/app/views/shared/_simple_form_for_users.html.erb
+++ b/app/views/shared/_simple_form_for_users.html.erb
@@ -2,10 +2,11 @@
   <%= f.input :name, class: "form-control" %>
   <%= f.input :email, class: "form-control" %>
   <%= f.input :location, class: "form-control" %>
-  <%= f.input :photo, class: "form-control" %>
   <%= f.input :description, class: "form-control" %>
   <%= f.input :payment_preferences, class: "form-control" %>
   <%= f.input :phone, class: "form-control" %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
   <%= f.submit "Edit your profile!", class: "btn-primary" %>
 <% end %>
 
