Photo uploader for courses done

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,9 +1,9 @@
 <h1>all courses:</h1>
 <ul style="padding: 0px 20px 0px 20px;">
     <% @courses.each do |course| %>
-      <div class="col-xs-12 col-sm-4">
+      <div class="col-xs-12 col-sm-6 col-lg-4">
         <div class="card card-spacing"
-            style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path course.last.photo, height: 300, width: 400, crop: :fill %>')">
+            style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= course.photo.url %>')">
           <div class="card-category">Popular</div>
           <div class="card-description">
             <h2><%= link_to course.name, course_path(course) %></h2>
