--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -92,3 +92,13 @@
   margin: 5px;
 }
 
+element.style {
+display: flex;
+align-items: center;
+padding: 20px 50px;
+justify-content: space-between;
+}
+
+
+
+
