--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,9 +6,9 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    <a><%= link_to 'Log In', new_user_session_path %> </a>
+    <%= link_to 'Log In', new_user_session_path %>
 
-    <a><%= link_to 'Sign Up', new_user_registration_path %></a>
+    <%= link_to 'Sign Up', new_user_registration_path %>
 
 
 
