--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fa fa-instagram"></i> </a>
-    <a href="#"><i class="fa fa-facebook"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i> </a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
   </div>
   <div class="footer-copyright">
    Easycourse
