--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,4 @@
-<h1>all courses:</h1>
+<h1 style="padding-left: 35px; margin-top: 0px;"><%= Course.all.count %> Courses offered</h1>
 <ul style="padding: 0px 20px 0px 20px;">
     <% @courses.each do |course| %>
       <div class="col-xs-12 col-sm-6 col-lg-4">
@@ -6,7 +6,7 @@
             style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= course.photo.url %>')">
           <div class="card-category">Popular</div>
           <div class="card-description">
-            <h2><%= link_to course.name, course_path(course) %></h2>
+            <h2><%= link_to course.name, course_path(course), {:style=>'color:white;'} %></h2>
             <p>Some more shit here please</p>
           </div>
           <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
