--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,16 +1,1 @@
-<h1><%= @course.name %></h1>
-
-<ul>
-  <li>
-    <%= @course.category %>
-  </li>
-  <li>
-    <%= @course.description %>
-  </li>
-  <li>
-    <%= @course.prerequisite %>
-  </li>
-  <li>
-    <%= cl_image_tag(@course.photo, width: 300, height: 400, crop: :fill) %>
-  </li>
-</ul>
+<%= render "shared/banner_show_course" %>
