--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,6 @@
 <div class="navbar-wagon" id="navbar">
 
-
- <h3>EasyCourse</h3>
+ <%= link_to "EasyCourse", root_path, class: 'navbar-logo' %>
 
  <!-- Right Navigation -->
  <div class="navbar-wagon-right hidden-xs hidden-sm">
