Changed navbar and footer layout

--- a/app/views/dashboard/bookings_index.html.erb
+++ b/app/views/dashboard/bookings_index.html.erb
@@ -1,8 +1,6 @@
-<h1>Dashboard#bookings_index</h1>
-<p>Find me in app/views/dashboard/bookings_index.html.erb</p>
-
 <div class="container">
   <div class="row">
+    <h1>All my subscribed classes:</h1>
     <% @bookings.each do |booking| %>
     <!-- Specify breaking points for col -->
       <div class="col-xs-12">
