--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,10 @@
 <div class="footer">
-  <div class="footer-links">
+  <div class="footer-links" style="padding-left: 75px;">
     <a href="#"><i class="fab fa-instagram"></i> </a>
     <a href="#"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-twitter"></i></a>
   </div>
-  <div class="footer-copyright">
+  <div class="footer-copyright" style="padding-right: 85px;">
    Easycourse
   </div>
 </div>
