--- a/app/views/dashboard/courses_index.html.erb
+++ b/app/views/dashboard/courses_index.html.erb
@@ -1,2 +1,7 @@
-<h1>Dashboard#courses_index</h1>
-<p>Find me in app/views/dashboard/courses_index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h1>All my posted classes:</h1>
+
+      </div>
+  </div>
+</div>
