Changed links on cards on index of courses

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -12,7 +12,7 @@
               <p>Some more shit here please</p>
             </div>
             <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-            <a class="card-link" href="#" ></a>
+            <a class="card-link" href="<%= course_path(course) %>" ></a>
           </div>
         </div>
       <% end %>
