--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -109,5 +109,8 @@ justify-content: space-between;
   font-weight: bold
 }
 
-
+.link-to-easycourse {
+  text-decoration: none;
+  border: 0px;
+}
 
