Add my posted courses

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon" id="navbar">
 
 
- <h3 style="padding-left: 100px;"><%= link_to image_tag("http://res.cloudinary.com/djjs4pnpf/image/upload/v1528891606/learning.png", {:style=>'width: 50px'}), root_path, class: 'navbar-logo', data: { confirm: "Svendus really? No purchase?!" }, class: "link-to-easycourse" %>     EasyCourse</h3>
+ <h3 style="padding-left: 100px;"><%= link_to image_tag("http://res.cloudinary.com/djjs4pnpf/image/upload/v1528891606/learning.png", {:style=>'width: 50px'}), root_path, class: 'navbar-logo', class: "link-to-easycourse" %>     EasyCourse</h3>
 
 
  <!-- Right Navigation -->
