added button to link to index

--- a/app/views/shared/_banner_landing.html.erb
+++ b/app/views/shared/_banner_landing.html.erb
@@ -7,6 +7,7 @@
       <input type="text" name="location" placeholder="Search Your Location ...">
     </form>
 
-    <a class="btn btn-primary btn-lg">Search now</a>
+    <%= link_to "Search", courses_path, class: "btn btn-primary btn-lg" %>
+
   </div>
 </div>
