--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,6 +10,7 @@
   <% if current_user %>
 
   <!-- Profile picture with dropdown list -->
+    <%= link_to "Add a new course", new_course_path, class: "navbar-wagon-link" %>
     <%= link_to "My booked classes", my_bookings_path, class: "navbar-wagon-link" %>
     <%= link_to "My hosted classes", my_courses_path, class: "navbar-wagon-link" %>
   <div class="navbar-wagon-item">
