added booking functionality

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -5,7 +5,7 @@
         <h1>Finalize your Booking</h1>
       </div>
       <div class="left">
-        <%= link_to "Confirm Booking", my_courses_path, class: "btn btn-primary btn-lg"%>
+        <%= link_to "Confirm Booking", course_bookings_path, method: :post, class: "btn btn-primary btn-lg"%>
       </div>
     </div>
 
