--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -11,7 +11,7 @@
               <h2><%= link_to course.name, course_path(course), {:style=>'color:white;'} %></h2>
               <p>Some more shit here please</p>
             </div>
-            <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+            <img class="card-user avatar" src=<%= course.user.photo.url %>>
             <a class="card-link" href="<%= course_path(course) %>" ></a>
           </div>
         </div>
