--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,8 @@
     <%= link_to "My hosted classes", my_courses_path, class: "navbar-wagon-link" %>
   <div class="navbar-wagon-item">
     <div class="dropdown">
-      <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
+
+     <img src=<%= current_user.photo.url %> class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li>
           <%= link_to "Profile", show_profile_path(current_user)%>
