--- a/app/views/shared/_banner_landing.html.erb
+++ b/app/views/shared/_banner_landing.html.erb
@@ -4,7 +4,7 @@
     <p>Learn the ability that you ever wanted to learn</p>
 
     <form class="location-search">
-      <input type="text" name="location" placeholder="Search Your Location ...">
+      <input type="text" name="location" placeholder="Search Your Location ..." class="search-text" id="location-autocomplete">
     </form>
 
     <%= link_to "Search", courses_path, class: "btn btn-primary btn-lg" %>
