--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -18,7 +18,12 @@
       <% end %>
   </ul>
 </div>
-
+<div
+      id="map"
+      style="width: 100%;
+      height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+    ></div>
 
 
 
