--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,29 +1,11 @@
+<%= render "shared/cards_index" %>
 
-<div class="row">
-  <h1 style="padding-left: 35px; margin-top: 0px;"><%= Course.all.count %> Courses offered</h1>
-  <ul style="padding: 0px 20px 0px 20px;">
-      <% @courses.each do |course| %>
-        <div class="col-xs-12 col-sm-6 col-lg-4">
-          <div class="card card-spacing"
-              style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= course.photo.url %>')">
-            <div class="card-category">Popular</div>
-            <div class="card-description">
-              <h2><%= link_to course.name, course_path(course), {:style=>'color:white;'} %></h2>
-              <p>Some more shit here please</p>
-            </div>
-            <img class="card-user avatar" src=<%= course.user.photo.url %>>
-            <a class="card-link" href="<%= course_path(course) %>" ></a>
-          </div>
-        </div>
-      <% end %>
-  </ul>
-</div>
 <div
-      id="map"
-      style="width: 100%;
-      height: 600px;"
-      data-markers="<%= @markers.to_json %>"
-    ></div>
+  id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+></div>
 
 
 
