included edit and destroy  for courses, show and destroy for booking

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -60,4 +60,17 @@
   color: white;
 }
 
+.card-edit {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 15px;
+  text-transform: uppercase;
+}
+
+.card-space-bet{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
 
