--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -21,7 +21,7 @@
               <hr>
               <p>Time: <%=@course.start_date  %></p>
               <hr>
-              <p>Price: <%= @course.price.to_int %>€</p>
+              <p>Price: <%= @course.price %>€</p>
             </div>
           </div>
           <div class="details user-details">
