--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,2 +1,5 @@
-<h1> More shit to come here </h1>
-<h2> Page show booking </h2>
+<%= render "shared/banner_show_booking" %>
+<%= render "shared/information_box_courses" %>
+
+
+
