--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,3 +1,4 @@
-<h1>Edit the course:</h1>
+<h1>Edit your course: "<%=@course.name%>"</h1>
 
-<%= render "shared/simple_form_for_course" %>
+<%= render "shared/simple_form_for_course_edit" %>
+
