--- a/app/views/dashboard/bookings_index.html.erb
+++ b/app/views/dashboard/bookings_index.html.erb
@@ -1,24 +1,38 @@
 <div class="container-mybookings">
   <!-- <div class="row row-mybookings"> -->
 
+    <% if current_user.bookings.empty? %>
+    <h3>You don't have any Bookings yet</h3>
 
-      <div class="row" style="padding: 0px 20px 0px 20px;">
-        <h1 style="margin-top: 60px; padding-left: 9px;">All my booked classes:</h1>
-        <% @bookings.each do |booking| %>
-          <div class="col-xs-12 col-sm-6" style="margin-left: -5px; margin-right: 5px;">
-            <div class="card card-spacing"
-              style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.2)), url('<%= booking.course.photo.url %>')">
-            <div class="card-category">Popular</div>
-            <div class="card-description">
-              <h2><%= link_to booking.course.name, course_path(booking.course), {:style=>'color:white;'} %></h2>
-              <p>Very cool city, the best</p>
-            </div>
-          </div>
+    <div class="delete-section">
+      <%= link_to "Search our Courses", courses_path, class: "btn btn-primary btn-md" %>
+    </div>
+
+    <% else %>
+    <div class="row" style="padding: 0px 20px 0px 20px;">
+      <h1 style="margin-top: 60px; padding-left: 9px;">All my booked classes:</h1>
+
+      <% @bookings.each do |booking| %>
+      <div class="col-xs-12 col-sm-6" style="margin-left: -5px; margin-right: 5px;">
+        <%= link_to course_booking_path(booking.course, booking) do %>
+        <div class="card card-spacing"
+        style="background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.2)), url('<%= booking.course.photo.url %>')">
+        <div class="card-category">Popular</div>
+        <div class="card-edit">
+          <%= link_to "Show Booking", course_booking_path(booking.course, booking), {:style=>'color:white;'} %>
         </div>
-      </row>
-    <% end %>
-  <!-- </div> -->
-</div>
+
+        <div class="card-description">
+          <h2><%= link_to booking.course.name, course_path(booking.course), {:style=>'color:white;'} %></h2>
+          <p>Very cool city, the best</p>
+        </div>
+        <% end %>
+      </div>
+      <% end %>
+    </div>
+ <% end %>
+    <!-- </div> -->
+  </div>
 
 
 
