added autocomplete on user creation and edit

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
     <%= f.input :password_confirmation, required: true %>
     <%= f.input :name, class: "form-control" %>
     <%= f.input :email, class: "form-control" %>
-    <%= f.input :location, class: "form-control" %>
+    <%= f.input :location, input_html: { class: 'location-autocomplete' } %>
     <%= f.input :photo, class: "form-control" %>
     <%= f.input :description, class: "form-control" %>
     <%= f.input :payment_preferences, class: "form-control" %>
