Random cards added to Landing Page

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/cards_index" %>
+<%= render "shared/cards_index", title: "#{Course.all.count} Courses offered" %>
 
 <div
   id="map"
