Fixed many things in user design

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,1 @@
-<div class="user-container">
-  <h1><%= @user.name %>'s profile</h1>
-  <%= cl_image_tag(@user.photo, width: 300, height: 400, crop: :fill) %>
-</div>
+<%= render "shared/user/user" %>
