--- a/app/assets/stylesheets/components/_user.scss
+++ b/app/assets/stylesheets/components/_user.scss
@@ -1,3 +1,55 @@
+.wrapper {
+  background-image: url('http://res.cloudinary.com/djjs4pnpf/image/upload/v1528986917/max-van-den-oetelaar-601242-unsplash.jpg'), linear-gradient(#eb01a5, #d13531);
+  background-size: cover !important;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.adjust-padding {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.wrapper-colorgrading {
+  background-color: blue;
+  opacity: 0.9;
+}
+
 .user-container {
-  height: 100vh;
+  min-height: calc(100vh - 70px - 64px);
+  background-color: #ffffffd1;
+  border-radius: 5px;
+  }
+
+.row-user-page {
+  margin: 0px;
+}
+
+.user-data {
+  padding-top: 4%;
+  padding-left: 4%;
+  padding-right: 0%;
+}
+
+.user-data-text {
+  padding-left: 0;
+}
+
+.text-decoration {
+  text-decoration: underline;
+}
+
+.h1-margin-top {
+  margin-top: 4px;
+}
+
+.h1-margin-top {
+  font-size: 28px;
+}
+
+.p-margin-bottom {
+  margin-bottom: 0px;
+  color: grey;
 }
