--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 
 <%= render "/shared/banner_landing" %>
 
-<%= render "/shared/cards_index", title: "Be inspired" %>
-
+<div style="margin-left: 5%; margin-right: 5%;">
+  <%= render "/shared/cards_index", title: "Be inspired" %>
+</div>
