--- a/app/views/shared/_cards_index.html.erb
+++ b/app/views/shared/_cards_index.html.erb
@@ -1,4 +1,5 @@
-<div class="row">
+
+<div class="row" style="margin-right: 0px; margin-left: 0px">
   <h1 style="padding-left: 35px; margin-top: 0px;"><%= title %></h1>
   <ul style="padding: 0px 20px 0px 20px;">
       <% @courses.each do |course| %>
