--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,5 +1,7 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "booking_new";
-@import "courses_show"
+@import "courses_show";
+@import "courses_new";
+
 
