--- a/app/views/shared/_simple_form_for_course.html.erb
+++ b/app/views/shared/_simple_form_for_course.html.erb
@@ -4,8 +4,8 @@
    <%= simple_form_for @course do |f| %>
    <%= f.input :name, class: "form-control" %>
    <%= render "shared/category_dropdown", f: f %>
-<!--     <%= f.input :start_date, class: "form-control" %>
-   <%= f.input :end_date, class: "form-control" %> -->
+  <%= f.input :start_date, class: "form-control" %>
+   <%= f.input :end_date, class: "form-control" %>
    <%= f.input :description, class: "form-control" %>
    <%= f.input :location, input_html: { class: 'location-autocomplete' } %>
    <%= f.input :price, class: "form-control" %>
