--- a/app/views/shared/_information_box_courses.html.erb
+++ b/app/views/shared/_information_box_courses.html.erb
@@ -1,25 +1,33 @@
 <div class="information-box">
-  <div class="general-information">
-    <p><strong>Date: </strong><%= @course.start_date.strftime('%x' )%></p>
-    <p><strong>Start time: </strong><%= @course.start_date.strftime('%r')%></p>
-    <p><strong>End time: </strong><%= @course.end_date.strftime('%r') %></p>
-    <p><strong>Location: </strong><%= @course.location%></p>
-    <p><strong>capacity: </strong><%=@course.capacity%></p>
-    <p><strong>price: </strong><%=@course.price%></p>
-  </div>
-
-
-  <div class="teacher-description">
-    <div class="details-information">
-      <p><strong>Description: </strong><%= @course.description%></p>
-      <p><strong>Prerequistes: </strong><%= @course.prerequisite%></p>
+  <div class="col-sm-6 general-information" style="padding-left: 3%; padding-top: 3%">
+    <div class="course-information">
+      <p><strong>Date: </strong><%= @course.start_date.strftime('%x' )%></p>
+      <p><strong>Start time: </strong><%= @course.start_date.strftime('%r')%></p>
+      <p><strong>End time: </strong><%= @course.end_date.strftime('%r') %></p>
+      <p><strong>Location: </strong><%= @course.location%></p>
+      <p><strong>capacity: </strong><%=@course.capacity%></p>
+      <p><strong>price: </strong><%=@course.price%></p>
     </div>
 
+    <div class="teacher-description course-information" style="margin-top: 20px;">
+      <div class="details-information">
+        <p><strong>Description: </strong><%= @course.description%></p>
+        <p><strong>Prerequistes: </strong><%= @course.prerequisite%></p>
+      </div>
 
-    <div class="teacher-information">
-      <p><strong>Teacher: </strong><%= @course.user.name%></p>
-      <%= cl_image_tag @course.user.photo, crop: :fill, class: "avatar" %>
-      <p><strong>Phone: </strong><%= @course.user.phone%></p>
+
+      <div class="teacher-information">
+        <p><strong>Teacher: </strong><%= @course.user.name%></p>
+        <%= cl_image_tag @course.user.photo, crop: :fill, class: "avatar" %>
+        <p><strong>Phone: </strong><%= @course.user.phone%></p>
+      </div>
+      </div>
     </div>
-    </div>
+    <div
+  id="map"
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+class="col-sm-6">
+
+</div>
   </div>
