--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,9 +1,18 @@
 <%= render "shared/form_query" %>
-<%= render "shared/cards_index", title: "#{Course.all.count} Courses offered" %>
 
-<div
-  id="map"
-  style="width: 100%;
-  height: 600px;"
-  data-markers="<%= @markers.to_json %>"
-></div>
+<div class="padding-right-10 padding-left-10 make-flex">
+
+  <div class="courses-cards">
+    <%= render "shared/cards_index", title: "#{Course.all.count} Courses offered" %>
+  </div>
+
+  <div class="map-container">
+    <div
+      id="map"
+      style="width: 100%;
+      height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+    ></div>
+  </div>
+
+</div>
