--- a/app/views/shared/_form_query.html.erb
+++ b/app/views/shared/_form_query.html.erb
@@ -1,45 +1,44 @@
 <form action="/courses" class="form-inline">
-  <div class="row" style="padding-top: 0px; margin-top: 1%; margin-left: 10%; margin-bottom: 0%; margin-left: 10%;">
-    <div class="col-xs-6 offset-xs-4">
-      <h1>See your results:</h1>
-    </div>
-  </div>
-  <div class="row" style="padding-top: 0px; margin-top: 1%; margin-left: 0%; margin-bottom: 0%; margin-left: 10%;">
-    <div class="col-xs-2">
-      <label for="location">Location:</label>
-      <input type="text" class="location-autocomplete form-control" name="location">
-    </div>
-    <div class="col-xs-2">
-      <label for="start_time">Start time:</label>
-      <input type="datetime-local" class="form-control" name="start_time">
-    </div>
-    <div class="col-xs-2">
-      <label for="end_time">End time:</label>
-      <input type="datetime-local" class="form-control" name="end_time">
-    </div>
-    <div class="col-xs-2">
-      <label for="category">Category:</label>
-      <select class="form-control" name="category">
-        <option value="tech">Tech</option>
-        <option value="sport">Sport</option>
-        <option value="music">Music</option>
-        <option value="language">Language</option>
-        <option value="arts">Arts</option>
-        <option value="food">Food</option>
-        <option value="relaxation">Relaxation</option>
-        <option value="career">Career</option>
-        <option value="beauty">Beauty</option>
-      </select>
-    </div>
-  </div>
-  <div class="row" style="padding-top: 0px; margin-top: 1%; margin-left: 10%; margin-bottom: 0%; margin-left: 10%;">
-    <div class="col-xs-6 offset-xs-4">
+
+      <div class="padding-right-10 padding-left-10">
+        <div class="form-spaced">
+          <div class="form-grouped">
+            <label for="location">Location:</label>
+            <input type="text" class="location-autocomplete form-control" name="location">
+          </div>
+
+          <div class="form-grouped">
+            <label for="start_time">Start time:</label>
+            <input type="datetime-local" class="form-control" name="start_time">
+          </div>
+
+               <div class="form-grouped">
+            <label for="end_time">End time:</label>
+           <input type="datetime-local" class="form-control" name="end_time">
+               </div>
+
+          <div class="form-grouped">
+            <label for="category">Category:</label>
+            <select class="form-control" name="category">
+              <option value="tech">Tech</option>
+              <option value="sport">Sport</option>
+              <option value="music">Music</option>
+              <option value="language">Language</option>
+              <option value="arts">Arts</option>
+              <option value="food">Food</option>
+              <option value="relaxation">Relaxation</option>
+              <option value="career">Career</option>
+              <option value="beauty">Beauty</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+    <div class="slidecontainer padding-right-10 padding-left-10 form-grouped">
     <label class="slider-output" for="max-price">Maximum Price: </label>
-    <div class="slidecontainer">
       <input name="max-price" type="range" min="1" max="100" value="50" class="slider" id="myRange">
     </div>
-  </div>
-  <input type="submit" class="btn btn-primary">
-  </div>
-  <!-- <input id="ex1" data-slider-id='ex1Slider' type="number" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="35"/> -->
+
+  <input type="submit" class="btn btn-primary" value="Filter">
+
 </form>
