Cards look good

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -68,6 +68,14 @@
   text-transform: uppercase;
 }
 
+.card-date {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  font-size: 15px;
+  text-transform: uppercase;
+}
+
 .card-space-bet{
   display: flex;
   justify-content: space-between;
