--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
 
   <body>
     <%= render "shared/navbar" %>
+    <div class="app-container">
     <%= yield %>
+    </div>
       <%= javascript_include_tag 'application' %>
       <%= javascript_pack_tag 'application' %>
       <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?libraries=places&key=#{ENV['GOOGLE_API_BROWSER_KEY']}" %>
