Margin on app container 10% right and left

--- a/app/views/dashboard/bookings_index.html.erb
+++ b/app/views/dashboard/bookings_index.html.erb
@@ -15,6 +15,11 @@
         <div class="card-edit">
           <%= link_to "Show Booking", course_booking_path(booking.course, booking), {:style=>'color:white;'} %>
         </div>
+        <div class="card-date">
+          <p> <strong>Date: </strong>
+            <%= booking.course.start_date.strftime('%x' )%>
+          </p>
+        </div>
 
         <div class="card-description">
           <h2> <%= link_to booking.course.name, course_path(booking.course), {:style=>'color:white;'} %> </h2>
