Added minus margins on banner

--- a/app/assets/stylesheets/components/_banner_landing.scss
+++ b/app/assets/stylesheets/components/_banner_landing.scss
@@ -8,6 +8,8 @@
   align-items: center;
   justify-content: center;
   background-position: center;
+  margin-left: -13%;
+  margin-right: -13%;
 }
 
 .banner h1 {
