fixed cards landing page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,5 @@
 <%= render "/shared/banner_landing" %>
 
 <div style="margin-left: 5%; margin-right: 5%;">
-  <%= render "/shared/cards_index", title: "Be inspired" %>
+  <%= render "/shared/cards_landingpage", title: "Be inspired" %>
 </div>
