realigned map and cards to be next to each other and aligned at the top

--- a/app/assets/stylesheets/components/_query.scss
+++ b/app/assets/stylesheets/components/_query.scss
@@ -7,7 +7,11 @@
   margin-left: 7.5px;
   margin-right: 7.5px;
 
+
   input.form-control {
+    option {
+        font-size: 14px;
+      }
 
   font-size: 14px;
 
@@ -18,6 +22,7 @@
   }
 }
 
+
 .padding-left-10 {
   padding-left: 10%;
 }
@@ -27,18 +32,18 @@
 }
 
 .small-heading{
-
-  font-size: 18px;
+  font-size: 38px;
 }
 
 .make-flex{
   display: flex;
+  align-items: flex-start;
 }
 
 .map-container{
-  width: 30%;
+  width: 40%;
 }
 
 .courses-cards {
-  width: 70%;
+  width: 60%;
 }
