--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,6 @@
 <%= render "/shared/banner_landing" %>
 
 <div style="margin-left: 5%; margin-right: 5%;">
-  <%= render "/shared/cards_index", title: "Be inspired" %>
+  <h1 style="padding-left: 35px; margin-top: 0px;">Be inspired</h1>
+  <%= render "/shared/cards_index" %>
 </div>
