--- a/app/views/shared/user/_user.html.erb
+++ b/app/views/shared/user/_user.html.erb
@@ -18,7 +18,8 @@
               <h1 class="h1-margin-top h1-margin-top"><%= @user.payment_preferences %></h1>
           </div>
         <div class="col-sm-12" style="padding-left: 0px; padding-right: 0px; margin-right: 0px; margin-left: ">
-          <%= render "/shared/cards_index", title: "My offered courses" %>
+          <h1 style="padding-left: 35px; margin-top: 0px;">My offered courses</h1>
+          <%= render "/shared/cards_index"%>
         </div>
       </div>
     </div>
