--- a/app/assets/stylesheets/pages/_courses_new.scss
+++ b/app/assets/stylesheets/pages/_courses_new.scss
@@ -19,6 +19,8 @@
   display: flex;
   align-items: center;
   background-position: center;
+  margin-left: -13%;
+  margin-right: -13%;
 }
 
 .form-header{
