Added design to all form pages

--- a/app/assets/stylesheets/pages/_courses_new.scss
+++ b/app/assets/stylesheets/pages/_courses_new.scss
@@ -5,10 +5,11 @@
   background-color: white;
   padding: 2px, 2px;
   width: 40%;
+  border-radius: 5px;
 }
 
 .form{
-  display: flex;
+
 }
 
 .form-banner{
