--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,14 @@
-<h1>Edit your profile</h1>
-<%= render 'shared/simple_form_for_users' %>
+
+  <div class="form-banner" style="background-image: linear-gradient(-225deg, rgba(50,50,50,0.5) 0%, rgba(50,50,50,0.5) 80%), url('https://images.unsplash.com/photo-1483738264799-0a03c7a9889f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8b5bad6d8d268a3ca592ec2ad7cbdb70&auto=format&fit=crop&w=1052&q=80');">
+
+    <div class="white-box">
+      <div class="form-header">
+
+      <h2>Edit your profile</h2>
+
+    </div>
+    <div class="form">
+      <%= render 'shared/simple_form_for_users' %>
+    </div>
+  </div>
+</div>
