--- a/app/assets/stylesheets/components/_user.scss
+++ b/app/assets/stylesheets/components/_user.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  background-image: url('http://res.cloudinary.com/djjs4pnpf/image/upload/v1528986917/max-van-den-oetelaar-601242-unsplash.jpg'), linear-gradient(#eb01a5, #d13531);
+  background-image: linear-gradient(-225deg, rgba(50,50,50,0.5) 0%, rgba(50,50,50,0.5) 80%), url('http://res.cloudinary.com/djjs4pnpf/image/upload/v1528986917/max-van-den-oetelaar-601242-unsplash.jpg'), linear-gradient(#eb01a5, #d13531);
   background-size: cover !important;
   padding-top: 5%;
   padding-bottom: 5%;
