Fixed style errors user page

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,7 +9,7 @@
 @import "containers";
 @import "howitworks";
 @import "slider";
-@import "simple_form_for_course";
+// @import "simple_form_for_course";
 @import "user";
 @import "query";
 @import "form";
