--- a/app/views/shared/_information_box_courses.html.erb
+++ b/app/views/shared/_information_box_courses.html.erb
@@ -1,5 +1,5 @@
 <div class="information-box">
-  <div class="col-sm-6 general-information" style="padding-left: 3%; padding-top: 3%">
+  <div class="col-sm-6 general-information" style="padding-left: 3%; padding-bottom: 0%;">
     <div class="course-information">
       <p><strong>Date: </strong><%= @course.start_date.strftime('%x' )%></p>
       <p><strong>Start time: </strong><%= @course.start_date.strftime('%r')%></p>
