--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -1,6 +1,6 @@
-// body {
-//   min-height: calc(100vh - 70px - 62px);
-// }
+body {
+  padding-top: 70px;
+}
 
 .row {
   margin-bottom: 50px;
@@ -15,7 +15,7 @@ img {
 }
 
 .app-container {
-  min-height: calc(100vh-70px);
+  min-height: calc(100vh - 144px);
   // margin-top: 5%;
   margin-left: 10%;
   margin-right: 10%;
