--- a/app/views/dashboard/courses_index.html.erb
+++ b/app/views/dashboard/courses_index.html.erb
@@ -1,8 +1,10 @@
 <div class="container-mybookings">
   <% if current_user.courses.empty? %>
-  <h3>You don't host any courses</h3>
-  <div class="delete-section">
-    <%= link_to "Add a new course", new_course_path, class: "btn btn-primary btn-md" %>
+  <div style="text-align: center; align-items: ">
+    <h3 style="margin-top: 0px; padding-top: 50px; ">You don't host any courses</h3>
+    <div class="delete-section">
+      <%= link_to "Add a new course", new_course_path, class: "btn btn-primary btn-md" %>
+    </div>
   </div>
   <% else %>
   <div class="row" style="padding: 0px 20px 0px 20px;">
