fixed landing page

--- a/app/views/shared/_banner_landing.html.erb
+++ b/app/views/shared/_banner_landing.html.erb
@@ -3,11 +3,9 @@
     <h1>EasyCourse</h1>
     <p>Learn the ability that you ever wanted to learn</p>
 
-    <form class="location-search">
-      <input type="text" name="location" placeholder="Search Your Location ..." class="search-text location-autocomplete">
-    </form>
 
-    <%= link_to "Search", courses_path, class: "btn btn-primary btn-lg" %>
+
+    <%= link_to "Look at our courses", courses_path, class: "btn btn-primary btn-lg" %>
 
   </div>
 </div>
