Revert "Fixed some styles"
This reverts commit aa6456807c7a58ac8be1e89ed61092cbb1b8bc88.

--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -1,6 +1,6 @@
-body {
-  padding-top: 70px;
-}
+// body {
+//   min-height: calc(100vh - 70px - 62px);
+// }
 
 .row {
   margin-bottom: 50px;
@@ -15,7 +15,7 @@ img {
 }
 
 .app-container {
-  min-height: calc(100vh - 144px);
+  min-height: calc(100vh-70px);
   // margin-top: 5%;
   margin-left: 10%;
   margin-right: 10%;
