--- a/app/views/shared/_howitworks.html.erb
+++ b/app/views/shared/_howitworks.html.erb
@@ -58,7 +58,7 @@
       </div>
         <div class="last2">
         <strong>
-       Choose the date and the time of the course which one you want.</strong>
+       Choose the date and the time of the course which one you is suitable for your agenda.</strong>
 
     </div>
     </div>
@@ -89,7 +89,7 @@
         <p><br>
             <div class="last3">
           <strong>
-          See your booked classes and hours.</strong>
+          See your booked classes and hours or maybe edit them in your profile.</strong>
         </p>
       </div>
       </div>
